--- a/components/HeroSection.html
+++ b/components/HeroSection.html
@@ -1,16 +1,24 @@
 <!-- HeroSection.html -->
 <section class="hero-section">
-    <div class="container">
-        <div class="hero-content">
-            <h1>Wine Quality Prediction</h1>
-            <p>Early detection can save lives. Use our AI-powered tool to assess your stroke risk factors.</p>
-            <div class="hero-btns">
-                <a href="/views/ui/predict.html" class="btn btn-primary">Start Prediction</a>
-                <a href="/views/ui/about.html" class="btn btn-secondary">Learn More</a>
-            </div>
-        </div>
-        <div class="hero-image">
-            <img src="/assets/hero-image.png" alt="Stroke Prevention Illustration">
-        </div>
+  <div class="container">
+    <div class="hero-content">
+      <h1>Chose Your Own Wine</h1>
+      <p>
+        Make your own wine and taste the perfect wine that your created, dont
+        forget to Cheers with your friends🍷
+      </p>
+      <div class="hero-btns">
+        <a href="/views/ui/predict.html" class="btn btn-primary"
+          >Break The Wine!</a
+        >
+        <a href="/views/ui/about.html" class="btn btn-secondary">Learn More</a>
+      </div>
     </div>
+    <div class="hero-image">
+      <img
+        src="/assets/drinking wine-bro (1).png"
+        alt="Stroke Prevention Illustration"
+      />
+    </div>
+  </div>
 </section>
