--- a/components/Header.html
+++ b/components/Header.html
@@ -1,22 +1,25 @@
 <!-- Header.html -->
 <header class="header">
-    <div class="container">
-        <div class="logo">
-            <a href="/views/ui/index.html">
-                <h1>WinePredicition</h1>
-            </a>
-        </div>
-        <nav class="nav-menu">
-            <ul>
-                <li><a href="/views/ui/index.html">Home</a></li>
-                <li><a href="/views/ui/predict.html">Prediction</a></li>
-                <li><a href="/views/ui/about.html">About</a></li>
-            </ul>
-        </nav>
-        <div class="mobile-menu-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+  <div class="container">
+    <div class="logo">
+      <a href="/views/ui/index.html">
+        <h1>WineStacks</h1>
+      </a>
     </div>
+    <nav class="nav-menu">
+      <ul>
+        <li><a href="/views/ui/index.html">Home</a></li>
+        <li><a href="/views/ui/predict.html">Create</a></li>
+        <li><a href="/views/ui/about.html">About</a></li>
+      </ul>
+    </nav>
+    <div class="mobile-menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+  <!-- Import the JavaScript controller -->
+  <script src="/controllers/index.js"></script>
 </header>
+<div class="menu-overlay"></div>
