--- a/views/ui/predict.html
+++ b/views/ui/predict.html
@@ -10,7 +10,10 @@
     />
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="/views/styles/predict.css" />
+    <link
+      rel="stylesheet"
+      href="/home/guevara/gdocProject/views/styles/predict.css"
+    />
     <link rel="stylesheet" href="/components/styles/Header.css" />
     <link
       rel="stylesheet"
